--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,11 @@
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "2.8.*|3.0.*"
     },
+	{
+		"require": {
+			"ext-newrelic": "*",
+		}
+	},
     "autoload": {
         "classmap": [
             "database"
